<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tetris</string>
    <string name="play_game">Play</string>
    <string name="pause_game">Pause</string>
    <string name="stop_game">Stop</string>
    <string name="push_again_to_exit">Push again to exit</string>
    <string name="level_up">Level %d</string>
    <string name="game_over">Game Over</string>
    <string name="update_available">New version %d is available, Download?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="settings">settings</string>
    <string name="english">English</string>
    <string name="russian">Русский</string>
    <string name="sound">Sound on/off</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="hi_score">Hi score: %s</string>
    <string name="version">Current version: %d</string>
    <string name="new_version">Update to %s</string>
    <string name="about">About game</string>
    <string name="red_text">(need restart)</string>
</resources>
